--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,8 +22,5 @@
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }],
-  "baseUrl": ".",
-  "paths": {
-    "@/*": ["./src/*"]
-  }
+  "extends": "./tsconfig.paths.json"
 }
