--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
 PORT=5000
-MONGO_URI=mongodb+srv://swap-tune20:SbEmfnabKNA5Owwb@cluster0.qcw7hjl.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=development
+DATABASE_URL=mongodb+srv://swap-tune20:SbEmfnabKNA5Owwb@cluster0.qcw7hjl.mongodb.net/?retryWrites=true&w=majority
+BCRYPT_SALT_ROUNDS=10
+JWT_SECRET=secret
+JWT_REFRESH_SECRET=secret-refresh
+JWT_EXPIRES_IN=1d
+JWT_REFRESH_EXPIRES_IN=30d
